--- a/Gw2MutexKiller/Gw2MutexKiller.csproj
+++ b/Gw2MutexKiller/Gw2MutexKiller.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{68A271B3-E5C8-4DF7-AD96-4966005FE384}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gw2MutexKiller</RootNamespace>
-    <AssemblyName>Gw2MutexKiller</AssemblyName>
+    <RootNamespace>GW2MutexKiller</RootNamespace>
+    <AssemblyName>GW2MutexKiller</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Gw2MutexKiller.Program</StartupObject>
+    <StartupObject>GW2MutexKiller.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,6 +50,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Win32API.cs" />
     <Compile Include="Win32Processes.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
